test/expected/declare_bi129.out
declare x as _BitInt(65)
        ^
9: error: _BitInt can be at most 64 bits
